packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/wld-002-not-found.ttrp
// expect: TTRP-WLD-002
uses world "acme.worlds.prod"
container c target polars { }
